todo-project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-project-frontend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-project-frontend
  template:
    metadata:
      labels:
        app: todo-project-frontend
    spec:
      containers:
        - name: todo-project
          image: 2kai/k8s-school-todo-project-frontend:2.09
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-project-api-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-project-api
  template:
    metadata:
      labels:
        app: todo-project-api
    spec:
      volumes:
        - name: daily-image-volume
          persistentVolumeClaim:
            claimName: common-claim
      containers:
        - name: todo-project
          image: 2kai/k8s-school-todo-project-api:2.10
          volumeMounts:
            - name: daily-image-volume
              mountPath: /opt/src/daily/
