todo-project/manifests/rollout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-project-frontend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-project-frontend
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: todo-project-frontend
    spec:
      containers:
        - name: todo-project
          image: 2kai/k8s-school-todo-project-frontend:4.05
          resources:
            requests:
              cpu: "150m"
              memory: "750Mi"
            limits:
              cpu: "500m"
              memory: "1000Mi"
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-project-api-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-project-api
  strategy:
    canary:
      analysis:
        templates:
          - templateName: cpu-usage-rate
      steps:
        - setWeight: 50
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: todo-project-api
    spec:
      volumes:
        - name: daily-image-volume
          persistentVolumeClaim:
            claimName: common-claim
      containers:
        - name: todo-project
          image: 2kai/k8s-school-todo-project-api:4.06
          volumeMounts:
            - name: daily-image-volume
              mountPath: /opt/src/daily/
          resources:
            requests:
              cpu: "150m"
              memory: "100Mi"
            limits:
              cpu: "300m"
              memory: "100Mi"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-project-broadcaster-dep
  namespace: project
spec:
  replicas: 6
  selector:
    matchLabels:
      app: todo-project-broadcaster
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: todo-project-broadcaster
    spec:
      containers:
        - name: broadcaster
          image: 2kai/k8s-school-todo-project-broadcaster:4.06
          resources:
            requests:
              cpu: "150m"
              memory: "100Mi"
            limits:
              cpu: "300m"
              memory: "100Mi"
