todo-project/manifests/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-project-postgres-svc
  namespace: project
spec:
  clusterIP: None
  selector:
    app: todo-project-postgres-ss
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-project-postgres-ss
  namespace: project
spec:
  serviceName: todo-project-postgres-svc
  selector:
    matchLabels:
      app: todo-project-postgres-ss
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: todo-project-postgres-ss
    spec:
      containers:
        - name: postgres
          image: postgres:14.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 200Mi
