todo-project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-project-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-project-frontend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: todo-project-api-svc
spec:
  type: ClusterIP
  selector:
    app: todo-project-api
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
